# khoji

./: .gitignore  README.md  pyproject.toml
data/sample/: shabads.jsonl
docs/: gurbani_constrained_alignment_plan.md  line_labeling.md  surt_alignment.md
examples/: queries.txt
scripts/: create_phase1_benchmark.py  download_shabados_db.py  evaluate_surt_alignment.py  register_phase1_recording.py
src/khoji/: __init__.py  asr.py  cli.py  corpus.py  line_labels.py  models.py  normalization.py  phase1.py  phase2.py  recordings.py  retriever.py  server.py  shabados.py  vectorizer.py
tests/: test_line_labels.py  test_phase1.py  test_phase2.py  test_recordings.py  test_retriever.py  test_server.py  test_shabados.py
web/: app.js  index.html  labeler.html  labeler.js  styles.css
